issue on safari

--- a/src/pages/Calculator.css
+++ b/src/pages/Calculator.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+/*@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");*/
 /*
 * means all elements 
 margin + padding helps to set default margins
@@ -6,7 +6,7 @@ margin + padding helps to set default margins
 * {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  /*font-family: "Montserrat", sans-serif;*/
 }
 
 .cal {
